- fixed noted not showing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,19 @@ span[contenteditable]:empty:focus::before {
     
 }
 
+.recover-holder{
+  padding-bottom: 30px;
+  padding-right: 30px;
+  margin-top: -10px;
+  margin-left: -10px;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  
+}
+
+
 .delete-holder button{
     border-radius: 35px;
     font-size: 1rem;
@@ -266,6 +279,20 @@ span[contenteditable]:empty:focus::before {
     transition: opacity 0.3s ease;
 }
 
+.recover-holder button{
+  border-radius: 35px;
+  font-size: 1rem;
+  color: white;
+  background-color: rgb(18, 109, 63);
+  height: 30px;
+  width: 30px;
+  z-index: 50;
+  border: 1px solid rgba(255, 255, 255, 0.411);
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
 .button-i{
     height: 100%; 
     display: flex; 
@@ -274,7 +301,9 @@ span[contenteditable]:empty:focus::before {
 }
 
 .delete-holder:hover button,
-.delete-holder:focus-within button {
+.delete-holder:focus-within button, 
+.recover-holder:hover button,
+.recover-holder:focus-within button {
   opacity: 1;
   pointer-events: auto;
 }
@@ -302,4 +331,15 @@ span[contenteditable]:empty:focus::before {
 .btn-secondary{
     background-color: rgba(116, 116, 116, 0.212) !important;
     border: none !important;
+}
+
+@media (max-width: 990px) {
+
+  .delete-holder button{
+    opacity: 1;
+  }
+
+  .recover-holder button{
+    opacity: 1;
+  }
 }
